--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brunch-app",
+  "name": "airborne",
   "description": "Description",
   "author": "Your Name",
   "version": "0.1.0",
@@ -15,14 +15,19 @@
     "bourbon": "^=5.0.0-beta.6",
     "bourbon-neat": "^1.8.0",
     "jquery": "^3.1.0",
+    "leaflet": "^1.0.2",
+    "moment": "^2.17.1",
     "normalize.css": "^4.2.0",
-    "sass-brunch": "^2.6.3"
+    "sass-brunch": "^2.6.3",
+    "superagent": "^3.3.1",
+    "superagent-jsonp": "^0.1.1"
   },
   "devDependencies": {
+    "auto-reload-brunch": "^2.0.0",
+    "babel-brunch": "^6.0.6",
     "brunch": "^2.0.0",
-    "javascript-brunch": "^2.0.0",
-    "uglify-js-brunch": "^2.0.0",
     "clean-css-brunch": "^2.0.0",
-    "auto-reload-brunch": "^2.0.0"
+    "javascript-brunch": "^2.0.0",
+    "uglify-js-brunch": "^2.0.0"
   }
 }
