--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bourbon-neat": "^1.8.0",
     "jquery": "^3.1.0",
     "leaflet": "^1.0.2",
+    "leaflet-rotatedmarker": "^0.1.2",
     "moment": "^2.17.1",
     "normalize.css": "^4.2.0",
     "sass-brunch": "^2.6.3",
