--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.1.0",
     "leaflet": "^1.0.2",
     "leaflet-rotatedmarker": "^0.1.2",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "normalize.css": "^4.2.0",
     "sass-brunch": "^2.6.3",
